static/css/style.css
/* ... */
			input[type="submit"].alt:hover,
			input[type="reset"].alt:hover,
			input[type="button"].alt:hover,
			.button.alt:hover {
				background-color: rgba(144, 144, 144, 0.075);
			}

			input[type="submit"].alt:active,
			input[type="reset"].alt:active,
			input[type="button"].alt:active,
			.button.alt:active {
				background-color: rgba(144, 144, 144, 0.2);
			}

			input[type="submit"].alt.icon:before,
			input[type="reset"].alt.icon:before,
			input[type="button"].alt.icon:before,
			.button.alt.icon:before {
				color: #0E1210;
			}

		input[type="submit"].special,
		input[type="reset"].special,
		input[type="button"].special,
		.button.special {
			background-color: #0E1210;
			color: #ffffff !important;
		}

			input[type="submit"].special:hover,
			input[type="reset"].special:hover,
			input[type="button"].special:hover,
			.button.special:hover {
				background-color: #444751;
			}

			input[type="submit"].special:active,
			input[type="reset"].special:active,
			input[type="button"].special:active,
			.button.special:active {
				background-color: #2c2f35;
			}

		input[type="submit"].disabled, input[type="submit"]:disabled,
		input[type="reset"].disabled,
		input[type="reset"]:disabled,
		input[type="button"].disabled,
		input[type="button"]:disabled,
		.button.disabled,
		.button:disabled {
			background-color: #444 !important;
			box-shadow: inset 0 -0.15em 0 0 rgba(0, 0, 0, 0.15);
			color: #fff !important;
			cursor: default;
			opacity: 0.25;
		}

/* Table */

	.table-wrapper {
		-webkit-overflow-scrolling: touch;
		overflow-x: auto;
	}

	table {
		margin: 0 0 2em 0;
		width: 100%;
	}

		table tbody tr {
			border: solid 1px rgba(144, 144, 144, 0.25);
			border-left: 0;
			border-right: 0;
		}

			table tbody tr:nth-child(2n + 1) {
				background-color: rgba(144, 144, 144, 0.075);
			}

		table td {
			padding: 0.75em 0.75em;
		}

		table th {
			color: #474747;
			font-size: 0.9em;
			font-weight: 700;
			padding: 0 0.75em 0.75em 0.75em;
			text-align: left;
		}

		table thead {
			border-bottom: solid 2px rgba(144, 144, 144, 0.25);
		}

		table tfoot {
			border-top: solid 2px rgba(144, 144, 144, 0.25);
		}

		table.alt {
			border-collapse: separate;
		}

			table.alt tbody tr td {
				border: solid 1px rgba(144, 144, 144, 0.25);
				border-left-width: 0;
				border-top-width: 0;
			}

				table.alt tbody tr td:first-child {
					border-left-width: 1px;
				}

			table.alt tbody tr:first-child td {
				border-top-width: 1px;
			}

			table.alt thead {
				border-bottom: 0;
			}

			table.alt tfoot {
				border-top: 0;
			}

/* Banner */

	#banner {
		background-image: url(../images/sf_3.jpg);
		background-position: center center;
		background-size: cover;
		background-repeat: no-repeat;
	  background-attachment: fixed;
		color: #ffffff;
		padding: 18em 0;
		text-align: center;
		-webkit-transform: translate3d(0,0,0);
		height: 92vh;
	}

		#banner :last-child {
			margin-bottom: 0;
		}

		#banner h2 {
			color: #FF5542;
			font-size: 4em;
			line-height: 1.25em;
			margin: 0 0 0.5em 0;
			padding: 0;
		}

		#banner p {
	    color: #FF5542;
	    font-size: 2.5em;
			font-family: 'Maven Pro', sans-serif;
	    font-weight: 400;
			margin-bottom: 1.75em;
		}

		@media only screen /*iPhone*/
		  and (min-device-width: 300px)
		  and (max-device-width: 568px)
		  and (-webkit-min-device-pixel-ratio: 2)  {




		    #banner {
		        overflow: hidden;
						width:100%;
						position:relative;
		        background: url(../images/banner.jpg) no-repeat center center;
						background-attachment: scroll;
		        -webkit-background-size: cover;
		        -moz-background-size: cover;
		        -o-background-size: cover;
		        background-size: cover;
		        z-index: -1;


		    }

		}

/* Wrapper */

	.wrapper {
		padding: 2em 0;
		/* Style 1 Wrapper */
		/* Style 2 Wrapper */
		/* Style 3 Wrapper */
	}

		.wrapper.style1 {
			background-color: #F5F5F5;
			border-bottom: 1px solid rgba(144, 144, 144, 0.25);
			border-top: 1px solid rgba(144, 144, 144, 0.25);
		}

			.wrapper .box {
				background-color: #fff;
				padding: 3em 2.5em;
			}

				.wrapper.style1 .box h2, .wrapper.style1 .box h3, .wrapper.style1 .box h4, .wrapper.style1 .box h5, .wrapper.style1 .box h6 {
					color: #0E1210;
				}

		.wrapper.style2 .profiles {
			border-bottom: 1px solid rgba(144, 144, 144, 0.25);
			border-top: 1px solid rgba(144, 144, 144, 0.25);
			margin-bottom: 4em;
			padding-top: 4em;
		}

		.wrapper.style2 .profile {
			margin-bottom: 2em;
			text-align: left;
		}

			.wrapper.style2 .profile img {
				border-radius: 50%;
				float: left;
				margin-bottom: 1em;
				margin-right: 1em;
			}

			.wrapper.style2 .profile h4 {
				margin-bottom: 0;
				margin-top: 1em;
			}

		.wrapper.style2 footer {
			margin-left: auto;
			margin-right: auto;
			width: 70%;
		}

			.wrapper.style2 footer p {
				margin-bottom: 3em;
			}

		.wrapper.style3 {
			background-color: #9e788f;
			color: #ffffff;
		}

			.wrapper.style3 h2, .wrapper.style3 h3, .wrapper.style3 p {
				color: #ffffff;
			}

			.wrapper.style3 input[type="text"],
			.wrapper.style3 input[type="password"],
			.wrapper.style3 input[type="email"],
			.wrapper.style3 select,
			.wrapper.style3 textarea {
				background-color: #fff;
				color: #444;
			}

			.wrapper.news {
				width: 80%;
				margin: 0 auto 4em auto;
			}

/* Footer */

	#footer {
		background: #99C5B0;
		color: #0E1210;
	}

		#footer h2, #footer h3, #footer h4 {
			color: #0E1210;
			margin-top: 1em;
		}

		#footer p, #footer a, #footer li {
			color: #0E1210;
			list-style: none;
		}

		#footer b {
			color: #0E1210;
		}

		section.links {
    	padding: 1.5em 0;
		}

		#footer .copyright {
			margin-top: 0.65em;
			padding: 0;
		}

			#footer .copyright li {
				color: #0E1210;
				font-size: x-small;
				display: inline-block;
				list-style: none;
				margin-left: 0.5em;
				padding-left: 0.5em;
			}
/* ... */

